{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 292,
  "lineage": "89b62a5f-b668-a3a3-a876-d3ac27e1fd62",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0edc1088ecd6e2a31",
            "arn": "arn:aws:ec2:us-east-1:887766270849:elastic-ip/eipalloc-0edc1088ecd6e2a31",
            "domain": "vpc",
            "id": "eipalloc-0edc1088ecd6e2a31",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-192-69-125.compute-1.amazonaws.com",
            "public_ip": "34.192.69.125",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0532be01f26a3de55",
            "arn": "arn:aws:ec2:us-east-1:887766270849:instance/i-08b36bc0830df307f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-profile",
            "id": "i-08b36bc0830df307f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0eca8ec14b413aaf6"
              }
            ],
            "primary_network_interface_id": "eni-0eca8ec14b413aaf6",
            "private_dns": "ip-10-0-4-162.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.162",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b4a7cc50015be192",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-033f25aec35393d2a",
            "tags": {
              "Enviroment": "dev-env",
              "Name": "devops-tijani-prviate-instance"
            },
            "tags_all": {
              "Enviroment": "dev-env",
              "Name": "devops-tijani-prviate-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0db726e484ee85d3f"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "887766270849",
            "id": "i-08b36bc0830df307f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.alb_sg",
            "aws_security_group.instance_sg",
            "aws_subnet.private_subnet_cidr",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:887766270849:internet-gateway/igw-0a338d221b2f34fd9",
            "id": "igw-0a338d221b2f34fd9",
            "owner_id": "887766270849",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev-env",
              "Name": "devops_igw"
            },
            "tags_all": {
              "Environment": "dev-env",
              "Name": "devops_igw"
            },
            "vpc_id": "vpc-0855364741a661528"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:887766270849:loadbalancer/app/devops-tijani-alb/a5547ef04e97c8b4",
            "arn_suffix": "app/devops-tijani-alb/a5547ef04e97c8b4",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "devops-tijani-alb-190406963.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:887766270849:loadbalancer/app/devops-tijani-alb/a5547ef04e97c8b4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "devops-tijani-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0c93dd066764f36bd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0393f9debd797292c"
              },
              {
                "subnet_id": "subnet-0645459c04c48cc21"
              }
            ],
            "subnets": [
              "subnet-0393f9debd797292c",
              "subnet-0645459c04c48cc21"
            ],
            "tags": {
              "Enviroment": "dev-env",
              "Name": "devops-tijani-alb"
            },
            "tags_all": {
              "Enviroment": "dev-env",
              "Name": "devops-tijani-alb"
            },
            "vpc_id": "vpc-0855364741a661528",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:887766270849:loadbalancer/app/devops-tijani-alb/a5547ef04e97c8b4"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet1_cidr",
            "aws_subnet.public_subnet2_cidr",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_lt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:887766270849:listener/app/devops-tijani-alb/a5547ef04e97c8b4/4ec737388ff33d57",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:887766270849:targetgroup/devops-tijani-tg/bd4982ec2e70ef71",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:887766270849:listener/app/devops-tijani-alb/a5547ef04e97c8b4/4ec737388ff33d57",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:887766270849:loadbalancer/app/devops-tijani-alb/a5547ef04e97c8b4",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:887766270849:listener/app/devops-tijani-alb/a5547ef04e97c8b4/4ec737388ff33d57"
          },
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.alb_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet1_cidr",
            "aws_subnet.public_subnet2_cidr",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:887766270849:targetgroup/devops-tijani-tg/bd4982ec2e70ef71",
            "arn_suffix": "targetgroup/devops-tijani-tg/bd4982ec2e70ef71",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:887766270849:targetgroup/devops-tijani-tg/bd4982ec2e70ef71",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "devops-tijani-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev-env",
              "Name": "devops-tijani_tg"
            },
            "tags_all": {
              "Environment": "dev-env",
              "Name": "devops-tijani_tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0855364741a661528"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:887766270849:targetgroup/devops-tijani-tg/bd4982ec2e70ef71"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:887766270849:targetgroup/devops-tijani-tg/bd4982ec2e70ef71-20260220121750277200000004",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:887766270849:targetgroup/devops-tijani-tg/bd4982ec2e70ef71",
            "target_id": "i-08b36bc0830df307f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.instance",
            "aws_lb_target_group.alb_tg",
            "aws_security_group.alb_sg",
            "aws_security_group.instance_sg",
            "aws_subnet.private_subnet_cidr",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0edc1088ecd6e2a31",
            "association_id": "eipassoc-03b25ac07a139843b",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0d34e3331da6c2c1d",
            "network_interface_id": "eni-06b9afcd323a3e6ee",
            "private_ip": "10.0.1.6",
            "public_ip": "34.192.69.125",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0645459c04c48cc21",
            "tags": {
              "Enviroment": "dev-env",
              "Name": "devops-nat"
            },
            "tags_all": {
              "Enviroment": "dev-env",
              "Name": "devops-nat"
            },
            "vpc_id": "vpc-0855364741a661528"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw_name",
            "aws_subnet.public_subnet1_cidr",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:887766270849:route-table/rtb-06c7ac3c5d943ae61",
            "id": "rtb-06c7ac3c5d943ae61",
            "owner_id": "887766270849",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d34e3331da6c2c1d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev-env",
              "Name": "devops-tijani-private-rt"
            },
            "tags_all": {
              "Environment": "dev-env",
              "Name": "devops-tijani-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0855364741a661528"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "887766270849",
            "id": "rtb-06c7ac3c5d943ae61",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw_name",
            "aws_nat_gateway.nat",
            "aws_subnet.public_subnet1_cidr",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:887766270849:route-table/rtb-0a4a44243b13118c5",
            "id": "rtb-0a4a44243b13118c5",
            "owner_id": "887766270849",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a338d221b2f34fd9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-tijani-public-rt"
            },
            "tags_all": {
              "Name": "devops-tijani-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0855364741a661528"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "887766270849",
            "id": "rtb-0a4a44243b13118c5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw_name",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f8dcc97188a53f7",
            "region": "us-east-1",
            "route_table_id": "rtb-06c7ac3c5d943ae61",
            "subnet_id": "subnet-033f25aec35393d2a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw_name",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_cidr",
            "aws_subnet.public_subnet1_cidr",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df1acb836002f5f7",
            "region": "us-east-1",
            "route_table_id": "rtb-0a4a44243b13118c5",
            "subnet_id": "subnet-0645459c04c48cc21"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw_name",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet1_cidr",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081d62d3f28b5b10a",
            "region": "us-east-1",
            "route_table_id": "rtb-0a4a44243b13118c5",
            "subnet_id": "subnet-0393f9debd797292c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw_name",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet2_cidr",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:887766270849:security-group/sg-0c93dd066764f36bd",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c93dd066764f36bd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "devops-tijani-alb-sg",
            "name_prefix": "",
            "owner_id": "887766270849",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-tijani-alb-sg"
            },
            "tags_all": {
              "Name": "devops-tijani-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0855364741a661528"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "887766270849",
            "id": "sg-0c93dd066764f36bd",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:887766270849:security-group/sg-0db726e484ee85d3f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0db726e484ee85d3f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c93dd066764f36bd"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "devops-tijani-ec2-sg",
            "name_prefix": "",
            "owner_id": "887766270849",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-tijani-ec2-sg"
            },
            "tags_all": {
              "Name": "devops-tijani-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0855364741a661528"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "887766270849",
            "id": "sg-0db726e484ee85d3f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_cidr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:887766270849:subnet/subnet-033f25aec35393d2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033f25aec35393d2a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "887766270849",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Enviroment": "dev-env",
              "Name": "devops-tijani-private-1"
            },
            "tags_all": {
              "Enviroment": "dev-env",
              "Name": "devops-tijani-private-1"
            },
            "vpc_id": "vpc-0855364741a661528"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "887766270849",
            "id": "subnet-033f25aec35393d2a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1_cidr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:887766270849:subnet/subnet-0645459c04c48cc21",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0645459c04c48cc21",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "887766270849",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "devops-tijani-public-1",
              "environment": "dev-env"
            },
            "tags_all": {
              "Name": "devops-tijani-public-1",
              "environment": "dev-env"
            },
            "vpc_id": "vpc-0855364741a661528"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "887766270849",
            "id": "subnet-0645459c04c48cc21",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet2_cidr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:887766270849:subnet/subnet-0393f9debd797292c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0393f9debd797292c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "887766270849",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Enviroment": "dev-env",
              "Name": "devops-tijani-public-2"
            },
            "tags_all": {
              "Enviroment": "dev-env",
              "Name": "devops-tijani-public-2"
            },
            "vpc_id": "vpc-0855364741a661528"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "887766270849",
            "id": "subnet-0393f9debd797292c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:887766270849:vpc/vpc-0855364741a661528",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-080152853a6dfd790",
            "default_route_table_id": "rtb-0251594e9a2f6c8f6",
            "default_security_group_id": "sg-0985fbc6f145baaac",
            "dhcp_options_id": "dopt-03c25ebfaeb278698",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0855364741a661528",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0251594e9a2f6c8f6",
            "owner_id": "887766270849",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev-env",
              "Name": "devops-tijani-vpc"
            },
            "tags_all": {
              "Environment": "dev-env",
              "Name": "devops-tijani-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "887766270849",
            "id": "vpc-0855364741a661528",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}